Added certifications tab at About me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Software Developer</p>
                 <h1>Hi, I'm <span>Willie</span> van Staden <br>from South Africa</h1>
             </div>
         </div>
@@ -38,7 +38,7 @@
                     <img src="images/user1.png">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
+                    <h1 class="sub-title">About Me</span></h1>
                     <p>Hello, my name is Willie, 
                         I am Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. 
                         I am Passionate about implementing and launching new projects. I possess the ability to translate business requirements into technical solutions. 
@@ -48,13 +48,26 @@
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('certifications')">Certifications</p>
+
 
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI?UX</span><br>Designing Web/App interfaces</li>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android/IOS apps</li>
+                            <li>Git</li>
+                            <li>Python</li>
+                            <li>JavaScript</li>
+                            <li>C#</li>
+                            <li>SQL</li>
+                            <li>ASP.NET</li>
+                            <li>Microsoft Azure</li>
+                            <li>.NET Framework</li>
+                            <li>Web Development</li>
+                            
+
+
+
+
 
                         </ul>
                     </div>
@@ -74,6 +87,17 @@
                             <li><span>2021 - 2022</span><br>CTU Training Solutions IT Systems Development</li>
                             <li><span>2022 - 2023</span><br>CTU Training Solutions IT Database Development</li>
                             <li><span>2016 - 2019</span><br>High School Jim Fouché</li>
+
+
+                        </ul>
+                    </div>
+
+                    <div class="tab-contents" id="certifications">
+                        <ul>
+                            <li><span>2022</span><br>Certificate: IT Database Development (SAQA ID 71850, NQF 6, 120 Credits)</li>
+                            <li><span>2022</span><br>Microsoft Certified: Azure AI Engineer Associate</li>
+                            <li><span>2021</span><br>National Certificate: IT Systems Development (SAQA ID 48872, NQF 5, 131 Credits)</li>
+                            <li><span>2020</span><br>FET Certificate: IT: Systems Development (SAQA ID: 78965 NQF Level 4, 165 Credits)</li>
 
 
                         </ul>
