--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                 <p><i class="fa-solid fa-paper-plane"></i>willie70700@gmail.com</p>
                 <p><i class="fa-solid fa-square-phone"></i>074 845 9167</p>
                 <div class="social-icons">
-                    <a href="facebook.com/willie.vanstaden.739"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/willi_vstn_"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://www.facebook.com/willie.vanstaden.739"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.twitter.com/willi_vstn_"><i class="fa-brands fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/willi_vstn_/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="www.linkedin.com/in/willie-van-staden-130a741a9"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/willie-van-staden-130a741a9"><i class="fa-brands fa-linkedin"></i></a>
 
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
