Added info in placeholders

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</span></h1>
-                    <p>Hello, my name is Willie, 
-                        I am Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. 
-                        I am Passionate about implementing and launching new projects. I possess the ability to translate business requirements into technical solutions. 
-                        Looking to start the career as an entry-level software engineer with a reputed firm driven by technology.
+                    <p>Hello, my name is Willie, I am an entry-level Software Developer offering a strong foundation in software engineering and programming principles across multiple platforms.
+
+                        Experienced in object-oriented programming; developing, testing, and debugging code; designing interfaces; and administering systems and networks.
+                        
+                        I am able to quickly learn and master new technologies; I'm successful working in both teams and self-directed settings.
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -56,7 +57,7 @@
                         <ul>
                             <li>Git</li>
                             <li>Python</li>
-                            <li>JavaScript</li>
+                            <li>Java</li>
                             <li>C#</li>
                             <li>SQL</li>
                             <li>ASP.NET</li>
@@ -73,10 +74,9 @@
                     </div>
                     <div class="tab-contents" id ="experience">
                         <ul>
-                            <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
-                            <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
-                            <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
-                            <li><span>2016 - 2017</span><br>Internship at ekart eComemrce.</li>
+                            <li><span>2022 - 2023</span><br>Inbound Clark at Takealot</li>
+                            <li><span>2017 - 2019</span><br>Waiter at Longhorn Grill</li>
+                            <li><span>2020 - 2020</span><br>Bartender at Copper Clover</li>
 
 
                         </ul>
@@ -112,32 +112,32 @@
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-code"></i>
-                <h2>Web Design</h2>
-                <p>random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
+                <h2>Web Application Development</h2>
+                <p>Web application development is an extension of standard software development with distinctive characteristics such as an increased need for an iterative development process. 
+                    Security is also a greater issue for web applications than traditional desktop applications since they have much greater exposure to attack. 
                     
                 </p>
-                <a href="#">Learn more</a>
+                <a href="https://www.baytechconsulting.com/services/full-stack-web-development-consultant">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-database"></i>
-                <h2>UI/UX Design</h2>
-                <p>random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
+                <h2>Mobile Application Development</h2>
+                <p>
+                    Mobile application development creates software for digital assistants and smartphones. 
+                    Users can access the software on their device through a mobile web browser or download it from a mobile app store. 
+                    The programming languages I used for such software include HTML5, C#, Java and Kotlin.
                 </p>
-                <a href="#">Learn more</a>
+                <a href="https://www.baytechconsulting.com/blog/what-services-does-a-software-development-company-provide">Learn more</a>
 
             </div>
             <div>
                 <i class="fa-solid fa-database"></i>
-                <h2>App Design</h2>
-                <p>random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
-                    random text random text random text random text random text random text random text 
+                <h2>Custom Software Development</h2>
+                <p>Large organizations frequently develop custom software to fill in the gaps of their existing commercial off-the-shelf (COTS) solutions. 
+                    These most often include applications for content management, customer management, human resource management and inventory management. 
+                    In many cases, an organization’s custom software was developed before the availability of COTS software to perform the required functions.
                 </p>
-                <a href="#">Learn more</a>
+                <a href="https://www.baytechconsulting.com/services/challenges-of-custom-software-development">Learn more</a>
 
             </div>
         </div>
@@ -152,29 +152,29 @@
             <div class="work">
                 <img src="images/work-1.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>This app lets you connect to talented people around the world</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Unit Converter App</h3>
+                    <p>This app allows the user to convert kg to lb</p>
+                    <a href="https://github.com/willivstn/UnitConverterApp"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-2.png">
                 <div class="layer">
                     <h3>Music App</h3>
-                    <p>This app lets you connect to talented people around the world</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p>This is a simple music player app that I made in Android studio using Java </p>
+                    <a href="https://github.com/willivstn/Media_Player_App"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>Online Shopping App</h3>
-                    <p>This app lets you connect to talented people around the world</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Lucky number App</h3>
+                    <p>This app allows the user to receive a lucky number and share it on social media</p>
+                    <a href="https://github.com/willivstn/LuckyNumberApp"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/willivstn?tab=repositories" class="btn">See more</a>
     </div>
 </div>
 <!-------------Contact--------------->
