--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>Lucky number App</h3>
-                    <p>This app allows the user to receive a lucky number and share it on social media</p>
+                    <h3>Contact Manager App</h3>
+                    <p>This app uses SQLITE to save and add to contacts to the app</p>
                     <a href="https://github.com/willivstn/LuckyNumberApp"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                     <a href="https://www.linkedin.com/in/willie-van-staden-130a741a9"><i class="fa-brands fa-linkedin"></i></a>
 
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Willie_van_Staden_CV.pdf" download class="btn btn2">Download CV</a>
             </div>
 
             <div class="contact-right">
