Updated App description

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <img src="images/work-3.png">
                 <div class="layer">
                     <h3>Contact Manager App</h3>
-                    <p>This app uses SQLITE to save and add to contacts to the app</p>
+                    <p>This app uses SQLITE to save, edit and delete contacts</p>
                     <a href="https://github.com/willivstn/LuckyNumberApp"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
