--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</span></h1>
-                    <p>Hello, my name is Willie, I am an entry-level Software Developer offering a strong foundation in software engineering and programming principles across multiple platforms.
+                    <br>
+                    <p style="text-align:center">Hello, my name is Willie, I am an entry-level Software Developer offering a strong foundation in software engineering and programming principles across multiple platforms.
 
-                        Experienced in object-oriented programming; developing, testing, and debugging code; designing interfaces; and administering systems and networks.
+                        Iam experienced in object-oriented programming; developing, testing, and debugging code; designing interfaces; and administering systems and networks.
                         
                         I am able to quickly learn and master new technologies; I'm successful working in both teams and self-directed settings.
                     </p>
@@ -63,7 +64,7 @@
                             <li>ASP.NET</li>
                             <li>Microsoft Azure</li>
                             <li>.NET Framework</li>
-                            <li>Web Development</li>
+                            <li>HTML & CSSt</li>
                             
 
 
@@ -209,7 +210,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Willie</p>
+        <p>Copyright © willi_vstn (Note that site is still in development)</p>
     </div>
 </div>
 
