Removed spelling mistake

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <li>ASP.NET</li>
                             <li>Microsoft Azure</li>
                             <li>.NET Framework</li>
-                            <li>HTML & CSSt</li>
+                            <li>HTML & CSS</li>
                             
 
 
