Improved Mobile layout

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</span></h1>
                     <br>
-                    <p style="text-align:center">Hello, my name is Willie, I am an entry-level Software Developer offering a strong foundation in software engineering and programming principles across multiple platforms.<br>
+                    <p class="aboutP">Hello, my name is Willie, I am an entry-level Software<br class="=break1"> Developer offering a strong foundation in software<br class="=break1"> engineering and programming principles across multiple<br class="=break1">  platforms.<br>
 
-                        I am experienced in object-oriented programming; developing, testing, and debugging code; designing interfaces; and administering systems and networks.<br>
+                        I am experienced in object-oriented programming;<br class="=break1"> developing, testing, and debugging code; designing<br class="=break1"> interfaces; and administering systems and networks.<br>
                         
-                        I am able to quickly learn and master new technologies; I'm successful working in both teams and self-directed settings.
+                        I am able to quickly learn and master new technologies;<br class="=break1"> I'm successful working in both teams and self-directed<br class="=break1">settings.
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
